@@ -16,6 +16,7 @@ import jakarta.persistence.Table;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import lombok.NoArgsConstructor;
 
@@ -47,7 +48,7 @@ class PostEntity {
         description,
         authorId,
         likeCounter,
-        comments.stream().map(CommentEntity::toDomain).toList()
+        comments.stream().map(CommentEntity::toDomain).collect(Collectors.toList())
     );
   }
 
@@ -60,7 +61,7 @@ class PostEntity {
     if (post.getComments() != null) {
       entity.comments = post.getComments().stream()
           .map(comment -> CommentEntity.fromDomain(comment, entity))
-          .toList();
+          .collect(Collectors.toList());
     }
     return entity;
   }
